<resources>
    <string name="app_name">Farkle</string>
    <string name="scoringBtn">Scoring</string>
    <string name="playBtn">Play Game</string>
    <string name="playBtn2">Play Again</string>
    <string name="startBtn">Start Game</string>
    <string name="optsBtn">Options</string>
    <string name="add">Add Player</string>
    <string name="winningScoreOption">Final Winning Score</string>
    <string name="breakIn">Break in score option</string>
    <string name="goHome">Home</string>
    <string name="fivek">5,000</string>
    <string name="tenk">10,000</string>
    <string name="twentyk">20,000</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="twoFifty">250</string>
    <string name="fiveC">500</string>
    <string name="onek">1,000</string>
    <string name="none">None</string>
    <string name="bank">Bank</string>
    <string name="roll">Roll</string>
    <string name="quit">Quit</string>
    <string name="win">Final Rankings</string>
    <string name="pass">Pass Dice</string>
    <string name="allScores">Check All Scores</string>
    <string name="scorePeek">Check Score</string>
    <string name="ptsAcc">Points accumulated this turn</string>
    <string name="totalPts">Total Points</string>
    <string name="rule1">1  50 points for each 5 when less than three 5s are rolled</string>
    <string name="rule2">2  100 points rolled for each 1 when less than \n
        three 1s are rolled</string>
    <string name="rule3">3  Score 100 times number of 3 of a kind except \n
        for three 1s that scores 1000</string>
    <string name="rule4">4  When 4, 5, or 6 of a kind, then \n
        score 200, 300, and 400 times the number\n
    except when the number rolled is 1, then 2000, 3000, \n and 4000 times</string>
    <string name="rule5">5  1500 points for a straight</string>
    <string name="rule6">6  1500 points for 3 pairs</string>
    <string name="rule7">7  2500 points for two 3 of a kinds</string>
    <string name="rule8">8  (Optional) 3 Farkles in a row and lose 1000 points</string>
    <string name="name">Name</string>
    <string name="farkles3">Three Farkles in a row - Lose 1000 points</string>
</resources>
