<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreenBack"
    tools:context=".GameOptions">

    <TextView
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/winningScoreOption"
        android:textColor="@android:color/black"
        android:textSize="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/option1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/option1">

        <RadioButton
            android:id="@+id/fiveK"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/fivek"
            android:textSize="22dp" />

        <RadioButton
            android:id="@+id/tenK"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:checked="true"
            android:text="@string/tenk"
            android:textSize="22dp" />

        <RadioButton
            android:id="@+id/twentyK"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/twentyk"
            android:textSize="22dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/farkles3"
        android:textColor="@android:color/black"
        android:textSize="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup1" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/option2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option2">

        <RadioButton
            android:id="@+id/yes"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/yes"
            android:textSize="22dp" />

        <RadioButton
            android:id="@+id/no"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:checked="true"
            android:text="@string/no"
            android:textSize="22dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/breakIn"
        android:textColor="@android:color/black"
        android:textSize="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup2" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/option3"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option3">

        <RadioButton
            android:id="@+id/none"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/none"
            android:textSize="22dp" />

        <RadioButton
            android:id="@+id/twoFifty"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:checked="true"
            android:text="@string/twoFifty"
            android:textSize="22dp" />

        <RadioButton
            android:id="@+id/fiveC"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/fiveC"
            android:textSize="22dp" />

        <RadioButton
            android:id="@+id/oneK"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/onek"
            android:textSize="22dp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup3">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:onClick="goHomeScreen"
            android:shadowColor="@android:color/black"
            android:text="@string/goHome"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnCont"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:onClick="startTheGame"
            android:text="@string/playBtn"
            android:textColor="@android:color/black" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>