<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreenBack"
    android:scrollbarAlwaysDrawVerticalTrack="true">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreenBack"
        android:orientation="vertical">


        <EditText
            android:id="@+id/name1"
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:hint="@string/name"
            android:textColor="@android:color/black"
            android:visibility="invisible" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btnAddPlayer"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:shadowColor="@android:color/black"
                android:text="@string/add"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnOptions"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:onClick="options"
                android:shadowColor="@android:color/black"
                android:text="@string/optsBtn"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnStart"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:onClick="start"
                android:shadowColor="@android:color/black"
                android:text="@string/startBtn"
                android:textColor="@android:color/black" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>
